Ivan's z-index fix wasn't enough, Issue #73 was still a problem

--- a/scss/_navs.scss
+++ b/scss/_navs.scss
@@ -502,11 +502,12 @@
     border-right: 1px solid $ws-sidebar-nav-border-other;
     content: '';
     display: block;
-    height: 100%;
+    // temporarally disabled because of https://github.com/gios-asu/ASU-Web-Standards-Bootstrap/issues/73
+    // height: 100%;
     left: 0;
     position: absolute;
     top: 0;
-    width: 100%;
+    // width: 100%;
     z-index: 0;
   }
 
